--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -1,8 +1,10 @@
 fusionforge (5.0.1+svn10155-1+) UNRELEASED; urgency=low
 
   * Switch to Unix sockets for DB access by default.
+  * Cope with postgresql-8.4 on both sides of 8.4.4-2, where the init
+    script can be called either "postgresql-8.4" or "postgresql".
 
- -- Roland Mas <lolando@debian.org>  Wed, 30 Jun 2010 16:10:58 +0200
+ -- Roland Mas <lolando@debian.org>  Thu, 19 Aug 2010 16:45:53 +0200
 
 fusionforge (5.0.1+svn10155-1) unstable; urgency=low
 
