--- a/src/plugins/wiki/www/admin/README
+++ b/src/plugins/wiki/www/admin/README
@@ -36,57 +36,51 @@ See http://www.xapian.org/
   This is a sample template section for search.tmpl to use xapian as external search engine.
 
   <h5>Fulltext Search</h5>
-  <form id="searchform2" name="searchform2" action="/cgi-bin/omega"
-      method="get" accept-charset="<?=$charset?>" style="display:inline" class="searchform">
+  <form id="searchform2" action="/cgi-bin/omega"
+      method="get" accept-charset="<?php echo $charset?>" style="display:inline" class="searchform">
     <?php $s = $request->getArg('s') ? $request->getArg('s') : _("Search"); ?>
     <input type="hidden" name="DEFAULTOP" value="AND" />
     <input name="P" size="18" maxlength="256"
-      value="<?=$s?>"
-      onfocus="if (this.value == '<?=_("Search")?>') {this.value = '';}"
+      value="<?php echo $s?>"
+      onfocus="if (this.value == '<?php echo _("Search")?>') {this.value = '';}"
       onmouseout="window.status=''; return true;" 
-      onmouseover="window.status='<?=_("Quick Search")?>'; return true;"
+      onmouseover="window.status='<?php echo _("Quick Search")?>'; return true;"
       type="text" id="search2" 
-      title="<?=_("Search term(s)") ?>" />
+      title="<?php echo _("Search term(s)") ?>" />
     <div align="right" style="padding-right:10px;">
       <input type="submit" name="searchtype" value="fulltext" class="searchButton" title="External Fulltext Search">
     </div>
   </form>
 
   This displays the result not in a wiki layout. However the omega layout can be tuned.
-
-!!! Open Office to Phpwiki converter
+== Open Office to Phpwiki converter
 
 Convert Open Office 2.3 (or later), Star Office, MS Word or MS Office Documents to Phpwiki.
 
-!! Installation
+=== Installation
 
 You first have to install (once for all) the Open Office to Phpwiki converter.
 
 To install the export filter:
-* Start Open Office 2.3 (or above)
-* From Tool choose "XML Filter Settings"
-* Choose "New" and in "General" fill the form with the following data:
-** Filter name: "Phpwiki"
-** Application: ~OpenOffice.org Writer (.odt)
-** Name of file type: "Phpwiki"
-** File extention: txt
-* Choose Transformation and fill the form with the following data:
-** XSLT for Export: put the full path to <strong>phpwiki/admin/odt2phpwiki.xsl</strong>
+* Start Open Office 2.3 (or later)
+* From //Tool// choose //XML Filter Settings//
+* Choose //New// and in //General// fill the form with the following data:
+** Filter name: //Phpwiki//
+** Application: //~OpenOffice.org Writer (.odt)//
+** Name of file type: //Phpwiki//
+** File extention: //txt//
+* Choose //Transformation// and fill the form with the following data:
+** //XSLT for Export//: put the full path to **phpwiki/admin/odt2phpwiki.xsl**
 
-!! Open Office Converter Usage
+=== Open Office Converter Usage
 
-Open your Word document in Open Office 2.3.
+Open your Word document in Open Office.
 
-Select ''Export...'' in the ''File'' menu, then select ''Phpwiki'' in ''File format'' menu.
+Select //Export...// in the //File// menu, then select //Phpwiki// in //File format// menu.
 
-You will get a text file (.txt). Copy and paste the content of this file in your wiki page.
+You will get a text file ({{{.txt}}}). Copy and paste the content of this file in your wiki page.
 
-Everything should work, except:
-* centered text and right-aligned text (will be left-aligned),
-* the wiki only supports 3 levels of titles,
-* tables will always be bordered (class="bordered"), regardless they are or not in Word; you might want to change this in the generated content,
-* some <nowiki> and </nowiki> tags might remain in the code.
-
-If there was a table of contents in your Word file, you can delete it and replace it with the ~CreateToc plugin (use the TOC button from the Edit Toolbar).
-
-You should also upload the images in your document.
+Please note the following:
+* Tables will always be bordered ({{{class="bordered"}}}), regardless they are or not in Word; you might want to change this in the generated content.
+* If there was a table of contents in your Word file, you can delete it and replace it with the ~CreateToc plugin (use the TOC button from the Edit Toolbar).
+* If there were images in your document, you should also upload them in the wiki.
