Set version to 5.0.2
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@10451 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/CHANGES
+++ b/gforge/CHANGES
@@ -1,3 +1,6 @@
+FusionForge-5.0.2:
+* Maintenance release, bugfixes mostly.
+
 FusionForge-5.0.1:
 * Maintenance release, bugfixes and translations only.
 
