--- a/src/CHANGES
+++ b/src/CHANGES
@@ -1,3 +1,6 @@
+FusionForge-5.0.2:
+* Maintenance release, bugfixes mostly.
+
 FusionForge-5.0.1:
 * Maintenance release, bugfixes and translations only.
 
