Preparing for an upcoming upload of 5.0.2-1 to Debian
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@10474 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -1,10 +1,11 @@
-fusionforge (5.0.1+svn10155-1+) UNRELEASED; urgency=low
+fusionforge (5.0.2-1) UNRELEASED; urgency=low
 
+  * New upstream bugfix release.
   * Switch to Unix sockets for DB access by default.
   * Cope with postgresql-8.4 on both sides of 8.4.4-2, where the init
     script can be called either "postgresql-8.4" or "postgresql".
 
- -- Roland Mas <lolando@debian.org>  Thu, 19 Aug 2010 16:45:53 +0200
+ -- Roland Mas <lolando@debian.org>  Tue, 14 Sep 2010 17:33:44 +0200
 
 fusionforge (5.0.1+svn10155-1) unstable; urgency=low
 
