--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -3,8 +3,9 @@ fusionforge (5.0.2-1+) UNRELEASED; urgency=low
   * Ship a /usr/share/gforge/plugins/ directory in gforge-web-apache2
     (closes: #597714).
   * Update roadmap URL (closes: #597847).
+  * Fix detection of PostgreSQL's init script (closes: #596931).
 
- -- Roland Mas <lolando@debian.org>  Thu, 23 Sep 2010 17:23:46 +0200
+ -- Roland Mas <lolando@debian.org>  Tue, 28 Sep 2010 20:42:06 +0200
 
 fusionforge (5.0.2-1) unstable; urgency=low
 
