--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -9,9 +9,10 @@ fusionforge (5.0.2-1+) UNRELEASED; urgency=low
   * Handle amd64 architectures and add missing files in chroot creation
     (closes: #396128, #536055).
   * Make up our mind about which config file to use (fusionforge.conf, not
-    gforge.conf) and migrate from gforge.conf if needed (closes: 597916).
+    gforge.conf) and migrate from gforge.conf if needed (closes: #597916).
+  * Ditto for fusionforge-config instead of gforge-config (closes: #597931).
 
- -- Roland Mas <lolando@debian.org>  Sun, 03 Oct 2010 15:53:52 +0200
+ -- Roland Mas <lolando@debian.org>  Sun, 03 Oct 2010 16:04:33 +0200
 
 fusionforge (5.0.2-1) unstable; urgency=low
 
