--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -11,8 +11,9 @@ fusionforge (5.0.2-1+) UNRELEASED; urgency=low
   * Make up our mind about which config file to use (fusionforge.conf, not
     gforge.conf) and migrate from gforge.conf if needed (closes: #597916).
   * Ditto for fusionforge-config instead of gforge-config (closes: #597931).
+  * Updated Spanish, Italian and French translations from upstream.
 
- -- Roland Mas <lolando@debian.org>  Sun, 03 Oct 2010 16:04:33 +0200
+ -- Roland Mas <lolando@debian.org>  Sun, 03 Oct 2010 18:07:55 +0200
 
 fusionforge (5.0.2-1) unstable; urgency=low
 
