--- a/src/translations/fr.po
+++ b/src/translations/fr.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: FusionForge 4.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-04 19:41+0200\n"
-"PO-Revision-Date: 2010-10-05 21:52+0200\n"
+"PO-Revision-Date: 2010-10-06 14:17+0200\n"
 "Last-Translator: Roland Mas <lolando@debian.org>\n"
 "Language-Team: FusionForge team <fusionforge-general@lists.fusionforge.org>\n"
 "Language: fr\n"
@@ -786,7 +786,7 @@ msgstr ""
 "de nouvelles versions de ce paquet sont publiées.  Si vous souhaitez\n"
 "interrompre ces notifications, connectez-vous à %7$s et suivez ce lien :\n"
 "\n"
-"%8$s"
+"%8$s\n"
 
 #: common/include/Error.class.php:126 common/include/Group.class.php:431
 #: common/include/Group.class.php:503
@@ -13023,7 +13023,7 @@ msgid ""
 msgstr ""
 "<p>Vous pouvez choisir parmi différents gestionnaires de sources pour\n"
 "votre projet mais seulement un seul (ou aucun). Veuillez choisir le\n"
-"gestionnaire de sources que vous souhaitez utiliser.</p>\n"
+"gestionnaire de sources que vous souhaitez utiliser.</p>"
 
 #: www/register/index.php:203
 msgid "No SCM"
